deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drone-rid
  labels:
    app.kubernetes.io/name: drone-rid
