deploy/k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: center-server
  namespace: drone-rid
  labels:
    app: center-server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: center-server
